<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/transparent"
    tools:context=".AllFragments.SignUpOne">

    <android.support.v4.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingRight="20dp"
            android:layout_marginTop="10sp"
            android:paddingLeft="20dp"
            android:orientation="vertical">

            <EditText
                android:id="@+id/signup_surname"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:background="@android:color/white"
                android:hint="@string/hint_surname"
                android:inputType="textPersonName"
                android:padding="10dp"
                android:imeOptions="actionNext"
                android:singleLine="true"
                android:textColor="@color/input_login"
                android:textColorHint="@color/input_login_hint" />

            <EditText
                android:id="@+id/signup_othername"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:background="@android:color/white"
                android:hint="@string/hint_othername"
                android:inputType="textPersonName"
                android:padding="10dp"
                android:imeOptions="actionNext"
                android:singleLine="true"
                android:textColor="@color/input_login"
                android:textColorHint="@color/input_login_hint"
                />
            <RadioGroup
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/signup_sex"
                android:orientation="horizontal"
                android:layout_marginBottom="10dp"
                android:padding="10dp"
                android:background="@android:color/white"
                >
                <RadioButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/input_login"
                    android:text="@string/sex_male"
                    android:id="@+id/signup_sex_male"/>
                <RadioButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/sex_female"
                    android:id="@+id/signup_sex_female"/>

            </RadioGroup>
            <EditText
                android:id="@+id/signup_email"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:background="@android:color/white"
                android:hint="@string/hint_email"
                android:inputType="textEmailAddress"
                android:padding="10dp"
                android:imeOptions="actionNext"
                android:singleLine="true"
                android:textColor="@color/input_login"
                android:textColorHint="@color/input_login_hint" />
            <EditText
                android:id="@+id/signup_phone_number"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:background="@android:color/white"
                android:hint="@string/hint_phone"
                android:inputType="phone"
                android:padding="10dp"
                android:imeOptions="actionNext"
                android:singleLine="true"
                android:textColor="@color/input_login"
                android:textColorHint="@color/input_login_hint" />
            <EditText
                android:id="@+id/signup_password"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:background="@android:color/white"
                android:hint="@string/hint_password"
                android:inputType="textPassword"
                android:padding="10dp"
                android:imeOptions="actionNext"
                android:singleLine="true"
                android:textColor="@color/input_login"
                android:textColorHint="@color/input_login_hint" />
            <EditText
                android:id="@+id/signup_confirm_password"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:background="@android:color/white"
                android:hint="@string/hint_confirm_password"
                android:inputType="textPassword"
                android:padding="10dp"
                android:imeOptions="actionDone"
                android:singleLine="true"
                android:textColor="@color/input_login"
                android:textColorHint="@color/input_login_hint" />
            <Button
                android:id="@+id/signup_button"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:textColor="@android:color/white"
                android:background="@drawable/button_background_inactive"
                android:text="@string/btn_sign_up" />


        </LinearLayout>

    </android.support.v4.widget.NestedScrollView>
</FrameLayout>
